# sotera

./: README.md  code1  code2  pyproject.toml  requirements.txt
api/: README.md  alembic.ini  database.db
api/alembic/: env.py
api/alembic/versions/: 0609e7428e7a_recovery.py  117595826e56_initial.py  3fe82015205e_init.py  5204f980c66e_init.py
api/src/: __init__.py
api/src/core/: config.py
api/src/core/dependencies/: get_current_user.py  get_db.py
api/src/core/domain/repositories/: repository_interface.py  user_repository_interface.py
api/src/core/exc/: sotera_exception.py
api/src/core/models/: __init__.py  base.py  credentials.py  recovery.py  sessions.py  users.py
api/src/modules/auth/: dependencies.py
api/src/modules/credentials/: dependencies.py
api/src/routers/v1/: router.py
driver/: ada.py  driver.py  main.py  run.py  utils.py
frontend/: package-lock.json
frontend-v2/: package.json  pnpm-lock.yaml
frontend-v2/src/: app.html
frontend-v2/src/lib/: utils.ts
frontend-v2/src/lib/components/: AddCredential.svelte  Credential.svelte  CredentialList.svelte
frontend-v2/src/routes/: +page.svelte  +page.ts
frontend/src/: app.html  hooks.server.ts
frontend/src/lib/: config.ts  session.ts  utils.ts
frontend/src/lib/components/: TitleCard.svelte  credentialCard.svelte
frontend/src/lib/types/: credential.ts  token.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.server.ts  +page.svelte
gui/: README.md
mesc/: decryption_test.py  encryption_test.py
(+28 files in other folders)
