[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Aashutosh Pudasaini <nepalidude3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.26.0"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
uvicorn = "^0.27.0.post1"
fastapi = {extras = ["latest"], version = "^0.109.0"}
snowflake-id = "^0.0.5"
rich = "^13.7.1"
pyserial = "^3.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
